--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8601,3 +8601,12 @@ input, select, textarea {
 			#wrapper.divided > .invert:first-child {
 				box-shadow: none !important;
 			}
+			#headerPopup{
+				width:75%;
+				margin:0 auto;
+			  }
+			  
+			  #headerPopup iframe{
+				width:100%;
+				margin:0 auto;
+			  }
